# zeal

./: Cargo.toml
doc/: bevy_notes.md  controls.md  initial_planning.md
doc/agile/: backlog.md  quicklog.md
examples/: hello_world.rs  periodic_spawn.rs  plot_demo.rs  shapes.rs
src/: bubble_graph.rs  camera.rs  cursor_control.rs  input.rs  layers.rs  lib.rs  main.rs  physics.rs  ui.rs
src/bubbles/: graph.rs  mod.rs  visuals.rs
src/components/: mod.rs
src/events/: mod.rs
src/input/: mod.rs  travel_mode.rs
src/resources/: mod.rs
src/ui/: mod.rs  physics_config.rs
